--- a/CoffeeMakerTests/CoffeeMakerTests.csproj
+++ b/CoffeeMakerTests/CoffeeMakerTests.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoffeeMakerStateMachineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
