--- a/Mark-IV-CoffeeMaker/Mark-IV-CoffeeMaker.csproj
+++ b/Mark-IV-CoffeeMaker/Mark-IV-CoffeeMaker.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoffeeMakerAPI.cs" />
+    <Compile Include="CoffeeMakerStateMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
