--- a/CoffeeMakerTests/CoffeeMakerTests.csproj
+++ b/CoffeeMakerTests/CoffeeMakerTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="CoffeeMachineTests.cs" />
     <Compile Include="CoffeeMakerStateMachineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateUpdaterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
