--- a/Mark-IV-CoffeeMaker/Mark-IV-CoffeeMaker.csproj
+++ b/Mark-IV-CoffeeMaker/Mark-IV-CoffeeMaker.csproj
@@ -57,11 +57,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoffeeMakerAPI.cs" />
+    <Compile Include="Interfaces\IApiAdapter.cs" />
+    <Compile Include="Interfaces\CoffeeMakerAPI.cs" />
     <Compile Include="CoffeeMakerStateMachine.cs" />
-    <Compile Include="Events.cs" />
+    <Compile Include="Interfaces\IControls.cs" />
+    <Compile Include="Enumerations\Events.cs" />
+    <Compile Include="Interfaces\IUpdater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="States.cs" />
+    <Compile Include="Interfaces\ISensors.cs" />
+    <Compile Include="Enumerations\States.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
