--- a/CoffeeMakerTests/CoffeeMakerTests.csproj
+++ b/CoffeeMakerTests/CoffeeMakerTests.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoffeeMakerStateMachineTests.cs" />
+    <Compile Include="CompositeUpdaterTests.cs" />
     <Compile Include="ControlUpdaterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateUpdaterTests.cs" />
